// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:admonition > caution 1`] = `
"<div class="admonitionblock caution">
<table>
<tr>
<td class="icon">
<div class="title">Caution</div>
</td>
<td class="content">
This is a caution.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > caution-block 1`] = `
"<div class="admonitionblock caution">
<table>
<tr>
<td class="icon">
<div class="title">Caution</div>
</td>
<td class="content">
<div class="paragraph">
<p>This is a caution with complex content.</p>
</div>
<div class="ulist">
<ul>
<li>
<p>It contains a list.</p>
</li>
</ul>
</div>
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > caution-with-id-and-role 1`] = `
"<div id="caution-1" class="admonitionblock caution red">
<table>
<tr>
<td class="icon">
<div class="title">Caution</div>
</td>
<td class="content">
This is a caution with id and role.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > caution-with-title 1`] = `
"<div class="admonitionblock caution">
<table>
<tr>
<td class="icon">
<div class="title">Caution</div>
</td>
<td class="content">
<div class="title">Title of caution</div>
This is a caution with title.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > important 1`] = `
"<div class="admonitionblock important">
<table>
<tr>
<td class="icon">
<div class="title">Important</div>
</td>
<td class="content">
This is an important notice.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > important-block 1`] = `
"<div class="admonitionblock important">
<table>
<tr>
<td class="icon">
<div class="title">Important</div>
</td>
<td class="content">
<div class="paragraph">
<p>This is an important notice with complex content.</p>
</div>
<div class="ulist">
<ul>
<li>
<p>It contains a list.</p>
</li>
</ul>
</div>
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > important-with-id-and-role 1`] = `
"<div id="important-1" class="admonitionblock important red">
<table>
<tr>
<td class="icon">
<div class="title">Important</div>
</td>
<td class="content">
This is an important notice with id and role.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > important-with-title 1`] = `
"<div class="admonitionblock important">
<table>
<tr>
<td class="icon">
<div class="title">Important</div>
</td>
<td class="content">
<div class="title">Title of important notice</div>
This is an important notice with title.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > note 1`] = `
"<div class="admonitionblock note">
<table>
<tr>
<td class="icon">
<div class="title">Note</div>
</td>
<td class="content">
This is a note.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > note-block 1`] = `
"<div class="admonitionblock note">
<table>
<tr>
<td class="icon">
<div class="title">Note</div>
</td>
<td class="content">
<div class="paragraph">
<p>This is a note with complex content.</p>
</div>
<div class="ulist">
<ul>
<li>
<p>It contains a list.</p>
</li>
</ul>
</div>
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > note-with-id-and-role 1`] = `
"<div id="note-1" class="admonitionblock note yellow">
<table>
<tr>
<td class="icon">
<div class="title">Note</div>
</td>
<td class="content">
This is a note with id and role.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > note-with-title 1`] = `
"<div class="admonitionblock note">
<table>
<tr>
<td class="icon">
<div class="title">Note</div>
</td>
<td class="content">
<div class="title">Title of note</div>
This is a note with title.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > tip 1`] = `
"<div class="admonitionblock tip">
<table>
<tr>
<td class="icon">
<div class="title">Tip</div>
</td>
<td class="content">
This is a tip.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > tip-block 1`] = `
"<div class="admonitionblock tip">
<table>
<tr>
<td class="icon">
<div class="title">Tip</div>
</td>
<td class="content">
<div class="paragraph">
<p>This is a tip with complex content.</p>
</div>
<div class="ulist">
<ul>
<li>
<p>It contains a list.</p>
</li>
</ul>
</div>
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > tip-with-id-and-role 1`] = `
"<div id="tip-1" class="admonitionblock tip blue">
<table>
<tr>
<td class="icon">
<div class="title">Tip</div>
</td>
<td class="content">
This is a tip with id and role.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > tip-with-title 1`] = `
"<div class="admonitionblock tip">
<table>
<tr>
<td class="icon">
<div class="title">Tip</div>
</td>
<td class="content">
<div class="title">Title of tip</div>
This is a tip with title.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > warning 1`] = `
"<div class="admonitionblock warning">
<table>
<tr>
<td class="icon">
<div class="title">Warning</div>
</td>
<td class="content">
This is a warning.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > warning-block 1`] = `
"<div class="admonitionblock warning">
<table>
<tr>
<td class="icon">
<div class="title">Warning</div>
</td>
<td class="content">
<div class="paragraph">
<p>This is a warning with complex content.</p>
</div>
<div class="ulist">
<ul>
<li>
<p>It contains a list.</p>
</li>
</ul>
</div>
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > warning-with-id-and-role 1`] = `
"<div id="warning-1" class="admonitionblock warning red">
<table>
<tr>
<td class="icon">
<div class="title">Warning</div>
</td>
<td class="content">
This is a warning with id and role.
</td>
</tr>
</table>
</div>"
`;

exports[`DocTest:admonition > warning-with-title 1`] = `
"<div class="admonitionblock warning">
<table>
<tr>
<td class="icon">
<div class="title">Warning</div>
</td>
<td class="content">
<div class="title">Title of warning</div>
This is a warning with title.
</td>
</tr>
</table>
</div>"
`;
